2009-11-24  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.1
        
        * Slightly improved FileProvider serialization algorithm - the
        garbage collection is only performed every 30 seconds, tops.
        
        * Bug fix: XML serialization in System view would generate
        in some cases multi-valued properties when only single values
        were serialized.

2009-10-30  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.0
        
        * Improved repository startup speed by a factor of four; replaced
        XPath.evaluate() with custom code.
        
        * FileProvider storage format changed slightly to avoid colons
        and non-letters as starting characters in file/dir names.  Need
        someone to test this on Windows.
        
2009-10-30  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.7
        
        * FileProvider is now case-sensitive even on case-insensitive file
        systems. 
        
2009-10-26  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.6
        
        * SessionProvider.checkSanity() was using the moved path for sanity
        checks, not the originator path. Oops.

2009-10-25  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.5
        
        * Added RepositoryImpl.shutdown() to facilitate repository restarts.
        
2009-10-15  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.4
        
        * Bug fix: Item.isNew() was returning false when a mixin was added.
        Reported by Andrew Jaquith.
        
        * Same-name-siblings added again; however, Node.orderBefore() does not
        work at the moment. 
        
2009-10-12  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.3
        
        * Fixed ValueFactoryImpl.createValue(Value) to make proper clones
        also for Calendar values.
        
2009-10-12  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.5.2
        
        * Fixed a number of leftover problems; again down to 8 failures on TCK.