@@ -1,3 +1,14 @@
+2009-12-05  Janne Jalkanen <jalkanen@ecyrd.com>
+
+        * Bug 7: Running perftest is now possible even when Jackrabbit
+        does not exist. Thanks to Kees Kuip.
+        
+        * Bug 6: compile and compiletests -targets had wrong dirsets.
+        Thanks to Kees Kuip pointing this out.
+
+		* ant clean would also delete generated sources - needing a
+		svn update. Now fixed.
+
 2009-11-24  Janne Jalkanen <jalkanen@ecyrd.com>
 
         * 0.6.1
